# sw

./: .env-template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  nginx.conf  pyproject.toml
html/: characters.html  count.html
sw/: conftest.py  manage.py  pytest.ini
sw/characters/: models.py  serializers.py  services.py  urls.py  views.py
sw/characters/migrations/: 0001_initial.py  0002_character.py
sw/characters/tests/: test_characters.py
sw/sw/: asgi.py  html.py  settings.py  urls.py  wsgi.py
sw/templates/: collection_details.html  collections.html
